# kw

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  KW.doxyfile  MGL.doxyfile  Makefile  README.md  mgl.sln  mgl.vcxproj  mgl.vcxproj.filters  mglConfig.h.in  mglObjectFactory.h
Debug/: makefile  sources.mk
Debug/src/: mglActionFactory.d  mglAppConfiguration.d  mglCoord.d  mglFontProvider.d  mglGuiActionFactory.d  mglGuiActionFunctor.d  mglGuiLibManager.d  mglGuiObject.d  mglGuiObjectFactory.d  mglInputMessage.d  mglLibHandle.d  mglLibraryInfo.d  mglLogChannel.d  mglLogger.d  mglMessage.d  mglMessageHandler.d  mglMessageHandlerLibHandle.d  mglSelectionContext.d  mglSystem.d  mglTextureManager.d  mglTimer.d  mglValColor.d  mglValFixedPoint.d  mglXMLValueReader.d  subdir.mk
Doxy/html/: annotated.html  classTextureManager-members.html  classTextureManager.html  classTextureManager__coll__graph.md5  classes.html  classmglAppConfiguration-members.html  classmglAppConfiguration.html  classmglDataContainer-members.html  classmglDataContainer.html  classmglDataContainer__coll__graph.map  classmglDataContainer__coll__graph.md5  classmglDataContainer__inherit__graph.map  classmglDataContainer__inherit__graph.md5  classmglDataLibHandle-members.html  classmglDataLibHandle.html  classmglDataLibHandle__coll__graph.map  classmglDataLibHandle__coll__graph.md5  classmglDataLibHandle__inherit__graph.map  classmglDataLibHandle__inherit__graph.md5  classmglDataSource-members.html  classmglDataSource.html  classmglDataSourceFactory-members.html  classmglDataSourceFactory.html  classmglDataSourceManager-members.html  classmglDataSourceManager.html  classmglDataSource__coll__graph.map  classmglDataSource__coll__graph.md5  classmglDataSource__inherit__graph.map  classmglDataSource__inherit__graph.md5  classmglDraggingContext-members.html  classmglDraggingContext.html  classmglDraggingContext__coll__graph.map  classmglDraggingContext__coll__graph.md5  classmglEventList.html  classmglFontProvider-members.html  classmglFontProvider.html  classmglGuiActionFactory-members.html  classmglGuiActionFactory.html  classmglGuiActionFunctor-members.html  classmglGuiActionFunctor.html  (+251 more)
config/: ExampleConfig.cfg
include/: CMakeLists.txt  mglActionFunctor.h  mglAppConfiguration.h  mglBase.h  mglCoord.h  mglEventList.h  mglGuiActionFactory.h  mglGuiLibManager.h  mglGuiObject.h  mglGuiObjectFactory.h  mglInputMessage.h  mglLibHandle.h  mglLibraryInfo.h  mglLogChannel.h  mglLogger.h  mglMessage.h  mglMessageHandler.h  mglMessageHandlerFactory.h  mglMessageHandlerLibHandle.h  mglMessageHandlerLibManager.h  mglSelectionContext.h  mglSystem.h  mglTimer.h  mglValColor.h  mglValFixedPoint.h  mglXMLValueReader.h
include/Logger/: mglLogChannel.h  mglLogDeviceFile.h  mglLogDeviceStdOut.h  mglLogger.h
include/kw/: CMakeLists.txt  kwBase.h  kwDataContainer.h  kwDataSource.h  kwDataSourceFactory.h  kwDebug.h  kwLibHandle.h  kwLibraryInfo.h  kwLibraryManager.h  kwLockedQueue.h  kwLogger.h  kwMessage.h  kwMessageHandler.h  kwMessageHandlerFactory.h  kwMessageHandlerMap.h  kwObject.h  kwObjectFactory.h  kwReleaseInfo.h  kwShm.h  kwSocketClient.h  kwSysTimerConfiguration.h  kwSystem.h  kwTechnicalException.h  kwTestHandler.h  kwTimer.h  kwValBool.h  kwValColor.h  kwValCoord.h  kwValFixedPoint.h  kwValFloat.h  kwValInteger.h  kwValJsonObject.h  kwValString.h  kwValUnsignedInteger.h  kwValue.h  kwVersion.h.in
include/mgl/: CMakeLists.txt  Version.h.in  mglBase.h  mglDataContainer.h  mglDataSource.h  mglDataSourceFactory.h  mglDebug.h  mglLibHandle.h  mglLibraryInfo.h  mglLibraryManager.h  mglLogChannel.h  mglLogDevice.h  mglLogDeviceFile.h  mglLogger.h  mglMessage.h  mglMessageHandler.h  mglMessageHandlerFactory.h  mglMessageHandlerMap.h  mglObject.h  mglObjectFactory.h  mglReleaseInfo.h  mglShm.h  mglSocketClient.h  mglSystem.h  mglTechnicalException.h  mglTimer.h  mglValColor.h  mglValCoord.h  (+5 more)
src/: CMakeLists.txt  kwDataContainer.cpp  kwDataSource.cpp  kwDataSourceFactory.cpp  kwException.cpp  kwLibHandle.cpp  kwLibraryInfo.cpp  kwLibraryManager.cpp  kwLogger.cpp  kwMessage.cpp  kwMessageHandler.cpp  kwMessageHandlerFactory.cpp  kwMessageHandlerMap.cpp  kwObject.cpp  kwObjectFactory.cpp  kwShm.cpp  kwSocketClient.cpp  kwSysTimerConfiguration.cpp  kwSystem.cpp  kwTestHandler.cpp  kwTimer.cpp  kwValBool.cpp  kwValColor.cpp  kwValCoord.cpp  kwValFixedPoint.cpp  kwValFloat.cpp  kwValInteger.cpp  kwValJsonObject.cpp  kwValString.cpp  kwValUnsignedInteger.cpp  kwValue.cpp  main.cpp  mglAppConfiguration.cpp  mglCoord.cpp  mglDataContainer.cpp  mglDataSource.cpp  mglDataSourceFactory.cpp  mglException.cpp  mglFontProvider.cpp  mglGuiActionFactory.cpp  (+32 more)
src/Logger/: mglLogChannel.cpp  mglLogDeviceFile.cpp  mglLogDeviceStdErr.cpp  mglLogDeviceStdOut.cpp  mglLogger.cpp
src/mglData/: mglShm.cpp
src/mglDataLayer/: mglDataContainer.cpp  mglDataLibHandle.cpp  mglDataSource.cpp  mglDataSourceFactory.cpp  mglDataSourceManager.cpp  mglShm.cpp  mglSocket.cpp  mglSocketClient.cpp
src/mglDebug/: mglException.cpp  mglLogChannel.cpp  mglLogDeviceFile.cpp  mglLogDeviceStdErr.cpp  mglLogDeviceStdOut.cpp  mglLogger.cpp
src/mglGui/: mglActionFunctor.cpp  mglDraggingContext.cpp  mglFontProvider.cpp  mglGuiActionFactory.cpp  mglGuiActionFunctor.cpp  mglGuiActionLibHandle.cpp  mglGuiLibHandle.cpp  mglGuiLibManager.cpp  mglGuiObject.cpp  mglGuiObjectEditable.cpp  mglGuiObjectFactory.cpp  mglInputMessage.cpp  mglSelectionContext.cpp  mglTexture.cpp  mglTextureManager.cpp
src/mglLogger/: mglLogChannel.cpp  mglLogDeviceFile.cpp  mglLogDeviceStdErr.cpp  mglLogDeviceStdOut.cpp  mglLogger.cpp
src/mglValues/: mglValColor.cpp  mglValCoord.cpp  mglValFixedPoint.cpp  mglValInteger.cpp  mglValString.cpp  mglValue.cpp  mglXMLValueReader.cpp
test/: CMakeLists.txt
test/data/: ConfigSnippet.json  TestConfig.json
test/src/: unit-key_regex.cpp  unit-kwDataContainer.cpp  unit-kwValBool.cpp  unit-kwValFixedPoint.cpp  unit-kwValFloat.cpp  unit-kwValInteger.cpp  unit-kwValString.cpp  unit-kwValUnsignedInteger.cpp  unit-payload_iterate.cpp
(+121 files in other folders)
